# iSpec_hack

./: .gitignore  Dockerfile  Ispec_hackathon_-_Copy_of_DB_LOAD_download_1.csv  README.md  app.py  architecture.md  architecture_diagram.rtf  check_metadata_duplicates.py  main.py  pyproject.toml  replit.md  requirements.txt
builds/: AgentPod.yaml  jenkinsfile
deploy/: gunicorn.conf.py
deploy/docs/: DEPLOYMENT_STEPS.md
deploy/k8s/: k8s-deployment.yaml  k8s-service.yaml
helm/: chart.yaml  values.yaml
helm/templates/: deployment.yaml  secret.yaml  service.yaml
static/css/: style.css
static/js/: app.js
static/templates/: target_mdd_template.csv
templates/: index.html
utils/: __init__.py  azure_openai_client.py  config.py  enhanced_matching_engine.py  field_aliases.py  match_thresholds.py  mdd_csv_aggregator.py  mdd_file_processor.py  mdd_output_generator.py  numpy_matching_engine.py  storage.py
